# HomeWorkCPP871

./: CMakeLists.txt  graphicwindows.cpp  graphicwindows.h  graphicwindows.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
